# tspi-linux-sdk

./: .gitattributes  .gitignore  .gitmodules  README.md
app/4G-daemon/: Makefile  S99_4G-daemon  main.c
app/DeviceTest/: DeviceTest.desktop  DeviceTest.pro  deviceTest.ini  main.cpp
app/DeviceTest/4G/: mobilenet.cpp  mobilenet.h  mobilenetthread.cpp  mobilenetthread.h
app/DeviceTest/adc/: adckey.cpp  adckey.h  adcthread.cpp  adcthread.h
app/lvgl_demo/: CMakeLists.txt  main.c  main.h
app/lvgl_demo/hal/: evdev.c  evdev.h  hal_drm.c  hal_drm.h  hal_sdl.c  hal_sdl.h  key.c  key.h
app/lvgl_demo/lvgl/: lv_port_file.c  lv_port_file.h  lv_port_indev.c  lv_port_indev.h
app/lvgl_demo/sys/: timestamp.c  timestamp.h  trace.c  trace.h
app/qsetting/: Rk_wifi.h  main.cpp  qsetting.pro  qtbt.cpp  qtbt.h  qtinputdialog.cpp  qtwifi.cpp  qtwifi.h
buildroot/: .gitignore
buildroot/configs/: rockchip_rk3399_defconfig  rockchip_rk3566_defconfig  rockchip_rk3568_defconfig  rockchip_rk3588_defconfig
buildroot/package/: Config.in
debian/: mk-base-debian.sh  mk-image.sh  mk-iso-debian.sh  mk-rootfs-bullseye.sh  post-build.sh  readme.md
debian/scripts/: config  rockbian.sh  unmount.sh
debian/ubuntu-build-service/: bullseye-desktop-arm64  bullseye-desktop-armhf
docs/: .gitignore
docs/cn/: docs_list_cn.txt
docs/en/: docs_list_en.txt
docs/licenses/: BUILDROOT_README  LICENSE  manifest.csv
kernel/drivers/: Makefile
rkbin/tools/: ddrbin_param.txt  liu.txt  luo.txt
tools/linux/: Linux_TA_Sign_Tool.rar
tools/windows/: FactoryTool-1.71.200.rar
uefi/: make.sh
(+339 files in other folders)
